Delete p element, add greeting

--- a/demo1.html
+++ b/demo1.html
@@ -12,10 +12,8 @@
   
   <a href="https://www.google.com">Go to Google</a>
   
-  <p class="end">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non unde vel, autem cum magni pariatur sunt consectetur ut! Quis placeat accusamus consectetur quos dignissimos qui facere nesciunt labore consequuntur distinctio!
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat vitae numquam ipsa magni facilis accusamus quisquam adipisci quae fugiat esse, corrupti doloribus id neque accusantium, eligendi consequuntur minus provident omnis?
-  </p>
+ 
+  <h2>Hello World!!!!!</h2>
   
   <div>
     <p class="sideBySide">
