--- a/exercise1.html
+++ b/exercise1.html
@@ -10,6 +10,7 @@
 <body>
   <h1>Kaitlin Hoffmann</h1>
   <h2>This is new!!!!</h2>
+  <h3>Another random text!!!</h3>
   <p>
     Lorem, 
     fksjgfjksdb
